# SK-MNIST

./: .gitignore  SK-MNIST.ipynb  helper_functions.py  main.py  pyproject.toml  requirements.txt  test.ipynb
